; ModuleID = '/home/carl/AnghaBench/reactos/dll/opengl/mesa/extr_hash.c_HashPrint.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/opengl/mesa/extr_hash.c_HashPrint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.HashTable = type { %struct.HashEntry** }
%struct.HashEntry = type { i32, %struct.HashEntry*, i32 }

@TABLE_SIZE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [7 x i8] c"%u %p\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @HashPrint(%struct.HashTable* %0) #0 {
  %2 = alloca %struct.HashTable*, align 8
  %3 = alloca i64, align 8
  %4 = alloca %struct.HashEntry*, align 8
  store %struct.HashTable* %0, %struct.HashTable** %2, align 8
  %5 = load %struct.HashTable*, %struct.HashTable** %2, align 8
  %6 = call i32 @assert(%struct.HashTable* %5)
  store i64 0, i64* %3, align 8
  br label %7

7:                                                ; preds = %33, %1
  %8 = load i64, i64* %3, align 8
  %9 = load i64, i64* @TABLE_SIZE, align 8
  %10 = icmp ult i64 %8, %9
  br i1 %10, label %11, label %36

11:                                               ; preds = %7
  %12 = load %struct.HashTable*, %struct.HashTable** %2, align 8
  %13 = getelementptr inbounds %struct.HashTable, %struct.HashTable* %12, i32 0, i32 0
  %14 = load %struct.HashEntry**, %struct.HashEntry*** %13, align 8
  %15 = load i64, i64* %3, align 8
  %16 = getelementptr inbounds %struct.HashEntry*, %struct.HashEntry** %14, i64 %15
  %17 = load %struct.HashEntry*, %struct.HashEntry** %16, align 8
  store %struct.HashEntry* %17, %struct.HashEntry** %4, align 8
  br label %18

18:                                               ; preds = %21, %11
  %19 = load %struct.HashEntry*, %struct.HashEntry** %4, align 8
  %20 = icmp ne %struct.HashEntry* %19, null
  br i1 %20, label %21, label %32

21:                                               ; preds = %18
  %22 = load %struct.HashEntry*, %struct.HashEntry** %4, align 8
  %23 = getelementptr inbounds %struct.HashEntry, %struct.HashEntry* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = load %struct.HashEntry*, %struct.HashEntry** %4, align 8
  %26 = getelementptr inbounds %struct.HashEntry, %struct.HashEntry* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 8
  %28 = call i32 @printf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 %24, i32 %27)
  %29 = load %struct.HashEntry*, %struct.HashEntry** %4, align 8
  %30 = getelementptr inbounds %struct.HashEntry, %struct.HashEntry* %29, i32 0, i32 1
  %31 = load %struct.HashEntry*, %struct.HashEntry** %30, align 8
  store %struct.HashEntry* %31, %struct.HashEntry** %4, align 8
  br label %18

32:                                               ; preds = %18
  br label %33

33:                                               ; preds = %32
  %34 = load i64, i64* %3, align 8
  %35 = add i64 %34, 1
  store i64 %35, i64* %3, align 8
  br label %7

36:                                               ; preds = %7
  ret void
}

declare dso_local i32 @assert(%struct.HashTable*) #1

declare dso_local i32 @printf(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
